# flashcard_gen

./: README.md  pyproject.toml
flashcard_gen/: ai.py  anki.py  gui.py  main.py
